--- a/src/app/pages/trackers-page/trackers-index/trackers.component.html
+++ b/src/app/pages/trackers-page/trackers-index/trackers.component.html
@@ -1,7 +1,7 @@
 <div class="entity-index">
   <div class="entity-index__title">
-    Trackers
-    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+    {{'TRACKER_INDEX_TITLE' | translate}}
+    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
   </div>
 
   <button md-icon-button color="primary" (click)="openAddMode()" *ngIf="hasWritePermission()" class="entity-index__add"><md-icon>add</md-icon></button>
