--- a/src/app/pages/users-page/user-view/user-add-new/user-add-new.component.html
+++ b/src/app/pages/users-page/user-view/user-add-new/user-add-new.component.html
@@ -1,10 +1,10 @@
 <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">User Details</div>
+    <div class="entity-view__card__header__title">{{'USER_DETAILS_TITLE' | translate}}</div>
     <ng-container *ngIf="mode !== modes.Add && !!editEnabled">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
-        <button md-menu-item (click)="changeMode.emit(modes.Update)"> Edit User Details </button>
+        <button md-menu-item (click)="changeMode.emit(modes.Update)">{{'USER_DETAILS_EDIT' | translate}}</button>
       </md-menu>
     </ng-container>
   </div>
@@ -12,21 +12,21 @@
   <form #userInput="ngForm" class="entity-view__card__content">
 
     <div class="user-view__item flex-custom flex-custom--center">
-      <span>Activated</span>
+      <span>{{'USER_DETAILS_ACTIVATED' | translate}}</span>
       <md-checkbox class="flex-align--right" [checked]="entity.active" (change)="entity.toggleActive()" [disabled]="mode === modes.View"></md-checkbox>
     </div>
 
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Name" name="name" [(ngModel)]="entity.name" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'USER_DETAILS_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.email" class="entity-view__card__content__item">
-      <input required md-input (keydown)="isEmail($event, entity.email)" [disabled]="mode !== modes.Add" placeholder="Email" name="email" [(ngModel)]="entity.email" type="text">
+      <input required md-input (keydown)="isEmail($event, entity.email)" [disabled]="mode !== modes.Add" placeholder="{{'USER_DETAILS_EMAIL' | translate}}" name="email" [(ngModel)]="entity.email" type="text">
     </md-input-container>
 
     <ng-container *ngIf="mode === modes.Add">
       <div class="user-view__item flex-custom flex-custom--center">
-        <span>New Account</span>
+        <span>{{'USER_DETAILS_NEWACCOUNT' | translate}}</span>
         <md-checkbox class="flex-align--right" [checked]="newAccount" (change)="newAccount = !newAccount"></md-checkbox>
       </div>
 
@@ -36,7 +36,7 @@
           class="user-view__item"
           [initialValue]="accountToAdd"
           [options]="accounts"
-          [placeholder]="'Account'"
+          [placeholder]="'USER_DETAILS_ACCOUNT' | translate"
           [mapFunction]="accountsMapFunction"
           (selected)="accountToAdd = $event">
         </autocomplete-input>
@@ -46,7 +46,7 @@
           class="user-view__item"
           [initialValue]="roleToAdd"
           [options]="roles"
-          [placeholder]="'Role'"
+          [placeholder]="'USER_DETAILS_ROLE' | translate"
           [mapFunction]="rolesMapFunction"
           (selected)="roleToAdd = $event">
         </autocomplete-input>
@@ -56,7 +56,7 @@
   </form>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancel.emit(true)">CANCEL</div>
-    <div (click)="saveUser(userInput.form.valid)">SAVE</div>
+    <div (click)="cancel.emit(true)">{{'USER_DETAILS_CANCEL' | translate}}</div>
+    <div (click)="saveUser(userInput.form.valid)">{{'USER_DETAILS_SAVE' | translate}}</div>
   </div>
 </div>
