--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
@@ -1,50 +1,50 @@
 <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{mode === modes.Add ? 'Create New Fulfillment Provider' : 'Fulfillment Details'}}</div>
+    <div class="entity-view__card__header__title">{{(mode === modes.Add ? 'FULFILLMENT_INFO_CREATETITLE' : 'FULFILLMENT_INFO_TITLE') | translate}}</div>
     <ng-container *ngIf="mode !== modes.Add">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
-        <button *ngIf="mode !== modes.Add" md-menu-item (click)="changeMode.emit(modes.Update)"> Edit Fulfillment Provider Details</button>
+        <button *ngIf="mode !== modes.Add" md-menu-item (click)="changeMode.emit(modes.Update)">{{'FULFILLMENT_INFO_EDIT' | translate}}</button>
       </md-menu>
     </ng-container>
   </div>
 
   <form class="entity-view__card__content" #inputForm="ngForm">
-    <dropdown-component [class.error]="formInvalid && !entity.provider.name" [required]="true" [disabled]="mode === modes.View" [placeholder]="'Provider'" [selected]="entity.provider.name" [options]="['Hashtag', 'ThreePL']" (onSelect)="entity.provider.name = $event"></dropdown-component>
+    <dropdown-component [class.error]="formInvalid && !entity.provider.name" [required]="true" [disabled]="mode === modes.View" [placeholder]="'FULFILLMENT_INFO_PROVIDER' | translate" [selected]="entity.provider.name" [options]="['Hashtag', 'ThreePL']" (onSelect)="entity.provider.name = $event"></dropdown-component>
 
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Name" [(ngModel)]="entity.name" name="name" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_NAME' | translate}}" [(ngModel)]="entity.name" name="name" type="text">
     </md-input-container>
 
     <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && !entity.provider.username" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Username" [(ngModel)]="entity.provider.username" name="username" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_USERNAME' | translate}}" [(ngModel)]="entity.provider.username" name="username" type="text">
     </md-input-container>
 
     <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && !entity.provider.password" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Password" [(ngModel)]="entity.provider.password" name="password" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_PASSWORD' | translate}}" [(ngModel)]="entity.provider.password" name="password" type="text">
     </md-input-container>
 
     <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && !entity.provider.threeplKey" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="ThreePL Key" [(ngModel)]="entity.provider.threeplKey" name="threeplKey" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'FULFILLMENT_INFO_THREEPLKEY' | translate}}" [(ngModel)]="entity.provider.threeplKey" name="threeplKey" type="text">
     </md-input-container>
 
     <md-input-container *ngIf="entity.provider.name === 'ThreePL'" [class.error]="formInvalid && (!entity.provider.threeplFacilityId && entity.provider.threeplFacilityId !== 0)" class="entity-view__card__content__item">
-      <input md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="Facility ID" [(ngModel)]="entity.provider.threeplFacilityId" name="facilityId" type="text">
+      <input md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="{{'FULFILLMENT_INFO_FACILITYID' | translate}}" [(ngModel)]="entity.provider.threeplFacilityId" name="facilityId" type="text">
     </md-input-container>
 
     <md-input-container *ngIf="entity.provider.name === 'ThreePL'" [class.error]="formInvalid && (!entity.provider.threeplId && entity.provider.threeplId !== 0)" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="ThreePL ID" [(ngModel)]="entity.provider.threeplId" name="threeplId" type="text">
+      <input required md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="{{'FULFILLMENT_INFO_THREEPLID' | translate}}" [(ngModel)]="entity.provider.threeplId" name="threeplId" type="text">
     </md-input-container>
 
     <md-input-container *ngIf="entity.provider.name" [class.error]="formInvalid && (!entity.provider.threeplCustomerId && entity.provider.threeplCustomerId !==0)" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="Customer ID" [(ngModel)]="entity.provider.threeplCustomerId" name="customerId" type="text">
+      <input required md-input [disabled]="mode === modes.View" (keydown)="isNumeric($event)" placeholder="{{'FULFILLMENT_INFO_CUSTOMERID' | translate}}" [(ngModel)]="entity.provider.threeplCustomerId" name="customerId" type="text">
     </md-input-container>
 
   </form>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancel.emit(true)">CANCEL</div>
-    <div (click)="saveProvider(inputForm.form.valid)">SAVE</div>
+    <div (click)="cancel.emit(true)">{{'FULFILLMENT_INFO_CANCEL' | translate}}</div>
+    <div (click)="saveProvider(inputForm.form.valid)">{{'FULFILLMENT_INFO_SAVE' | translate}}</div>
   </div>
 </div>
 
