--- a/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
@@ -1,7 +1,7 @@
 <div class="entity-index">
   <div class="entity-index__title">
-    Fulfillment Providers
-    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+    {{'FULFILLMENT_INDEX_TITLE' | translate}}
+    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
   </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><md-icon>add</md-icon></button>
