Add translations for smtp

--- a/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-add-new/smtp-provider-add-new.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-add-new/smtp-provider-add-new.component.html
@@ -1,10 +1,10 @@
 <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{mode === modes.Add ? 'Create New SMTP Provider' : 'SMTP Details'}}</div>
+    <div class="entity-view__card__header__title">{{(mode === modes.Add ? 'SMTP_INFO_CREATETITLE' : 'SMTP_INFO_TITLE') | translate}}</div>
     <ng-container *ngIf="mode !== modes.Add">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
-        <button *ngIf="mode !== modes.Add" md-menu-item (click)="changeMode.emit(modes.Update)"> Edit SMTP Details</button>
+        <button *ngIf="mode !== modes.Add" md-menu-item (click)="changeMode.emit(modes.Update)">{{'SMTP_INFO_EDIT' | translate}}</button>
       </md-menu>
     </ng-container>
 
@@ -12,37 +12,37 @@
 
   <form class="entity-view__card__content" #smtpInputForm="ngForm">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Name" [(ngModel)]="entity.name" name="name" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_NAME' | translate}}" [(ngModel)]="entity.name" name="name" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.fromName" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="From Name" [(ngModel)]="entity.fromName" name="fromName" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_FROMNAME' | translate}}" [(ngModel)]="entity.fromName" name="fromName" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.fromEmail" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="From Email" [(ngModel)]="entity.fromEmail" name="fromEmail" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_FROMEMAIL' | translate}}" [(ngModel)]="entity.fromEmail" name="fromEmail" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.hostname" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Host" [(ngModel)]="entity.hostname" name="host" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_HOST' | translate}}" [(ngModel)]="entity.hostname" name="host" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.username" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Username" [(ngModel)]="entity.username" name="username" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_USERNAME' | translate}}" [(ngModel)]="entity.username" name="username" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.password" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Password" [(ngModel)]="entity.password" name="password" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_PASSWORD' | translate}}" [(ngModel)]="entity.password" name="password" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.port" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Port" (keydown)="isNumeric($event)" [(ngModel)]="entity.port" name="port" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_PORT' | translate}}" (keydown)="isNumeric($event)" [(ngModel)]="entity.port" name="port" type="text">
     </md-input-container>
   </form>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancel.emit(true)">CANCEL</div>
-    <div (click)="saveProvider(smtpInputForm.form.valid)">SAVE</div>
+    <div (click)="cancel.emit(true)">{{'SMTP_INFO_CANCEL' | translate}}</div>
+    <div (click)="saveProvider(smtpInputForm.form.valid)">{{'SMTP_INFO_SAVE' | translate}}</div>
   </div>
 </div>
 
