Add translateions for loadbalancer

--- a/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-add-new/load-balancer-add-new.component.html
+++ b/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-add-new/load-balancer-add-new.component.html
@@ -1,17 +1,17 @@
 <div class="entity-view__card entity-view__card--create">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">Create new Load Balancer</div>
+    <div class="entity-view__card__header__title">{{'LOADBALANCER_INFO_CREATETITLE' | translate}}</div>
   </div>
 
   <form class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input required md-input placeholder="Name" [(ngModel)]="entity.name" name="name" type="text">
+      <input required md-input placeholder="{{'LOADBALANCER_INFO_NAME' | translate}}" [(ngModel)]="entity.name" name="name" type="text">
     </md-input-container>
   </form>
 
   <div class="entity-view__card__actions">
-    <div (click)="cancel.emit(true)">CANCEL</div>
-    <div (click)="saveLoadBalancer()">SAVE</div>
+    <div (click)="cancel.emit(true)">{{'LOADBALANCER_INFO_CANCEL' | translate}}</div>
+    <div (click)="saveLoadBalancer()">{{'LOADBALANCER_INFO_SAVE' | translate}}</div>
   </div>
 </div>
 
